Fix layout issue at page 5

--- a/styles/style_main.css
+++ b/styles/style_main.css
@@ -133,11 +133,10 @@
 }
 
 .icon-button {
-
 	width: 57px;
 	height: 57px;
 	padding: 0px 5px 0px 5px;
-	justify-content: flex-start;
+	justify-content: center;
 	align-items: center;
 	display: inline-flex;
 
@@ -185,7 +184,7 @@ span {
 		display: flex;
 		margin: 0.75em 1em 0.75em 1em;
 	}
-	width:100%;
+	width: 100%;
 	padding-left: 10px;
 	padding-right: 10px;
 	position: relative;
