--- a/styles/style_sub.css
+++ b/styles/style_sub.css
@@ -23,7 +23,7 @@
 	background: linear-gradient(#D9D9D900 0%, #D9D9D900 50%, #D9D9D9FF 70%, #FBFBFBFF 100%), url("../resources/image/Cover_0.jpg") no-repeat center center;
 	background-size: cover;
 	background-position: 50% 20%;
-  width:100%;
+	width:100%;
 	height: 100vh;
 	min-height: 480px;
 	overflow-x: hidden;
@@ -35,9 +35,10 @@
 	position: relative;
 	flex-direction: column;
 	justify-content: flex-start;
-	align-items: flex-start;
+	align-items: center;
 	gap: 10px;
 	display: inline-flex;
+	width: 100%;
 }
 
 .iconButtonContainer {
@@ -46,6 +47,7 @@
 	justify-content: space-between;
 	align-items: flex-start;
 	display: inline-flex;
+	flex-wrap: wrap;
 }
 
 /* More gallery */
